--- a/style.css
+++ b/style.css
@@ -1074,6 +1074,7 @@ a.basket {
     align-items: center;
     padding: 0 20px;
     gap: 50px;
+    flex-wrap: wrap;
 }
 .about-title {
     color: #fff;
@@ -1087,3 +1088,28 @@ a.basket {
     opacity: 70%;
 }
 
+
+@media (max-width: 500px) {
+    .filter h1 {
+        font-size: 35px;
+        text-align: center;
+    }
+
+    .filter p {
+        max-width: 100%;
+    }
+
+    a.btn {
+        padding: 16px 86px;
+    }
+
+    .cat-title {
+        max-width: 100%;
+        padding: 0 20px;
+    }
+
+
+    .product h2 {
+        font-size: 30px;
+    }
+}
